# mod-manager-lib

./: README.md  mod-manager-lib.code-workspace  pyproject.toml
.github/workflows/: lint_and_test.yaml
src/: main.py
src/core/: game.py
src/core/instance/: instance.py
src/core/mod_manager/: instance_info.py  mod_manager.py
src/core/mod_manager/vortex/: exceptions.py
src/mod_manager_lib/core/: exceptions.py  game_service.py
src/mod_manager_lib/core/instance/: instance.py  metadata.py  mod.py  tool.py
src/mod_manager_lib/core/mod_manager/: __init__.py  exceptions.py  instance_info.py  mod_manager.py  mod_manager_api.py
src/mod_manager_lib/core/mod_manager/modorganizer/: exceptions.py  mo2_instance_info.py  modorganizer.py
src/mod_manager_lib/core/mod_manager/vortex/: leveldb.py  profile_info.py  vortex.py
src/mod_manager_lib/core/utilities/: filesystem.py
src/mod_manager_lib/ui/instance_creator/: base_creator_widget.py  instance_creator_widget.py  modorganizer_creator_widget.py  vortex_creator_widget.py
src/mod_manager_lib/ui/instance_selector/: base_selector_widget.py  instance_selector_widget.py  modorganizer_selector_widget.py  vortex_selector_widget.py
src/ui/instance_creator/: base_creator_widget.py  instance_creator_widget.py  modorganizer_creator_widget.py
src/ui/instance_selector/: base_selector_widget.py  modorganizer_selector_widget.py
tests/: base_test.py
tests/core/: test_game_service.py
tests/core/instance/: test_instance.py
tests/core/mod_manager/: test_modorganizer.py  test_vortex.py
tests/core/mod_manager/modorganizer/: test_mo2_instance_info.py  test_modorganizer.py
tests/core/mod_manager/vortex/: test_profile_info.py
tests/data/: games.json
tests/ui/instance_creator/: test_modorganizer_creator_widget.py
tests/ui/instance_selector/: test_instance_selector_widget.py  test_modorganizer_selector_widget.py  test_vortex_selector_widget.py
