[project]
name = "mod-manager-lib"
version = "1.0.0"
description = "A core library for interfacing with mod managers like Mod Organizer 2 and Vortex."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Cutleast", email = "cutleast@gmail.com" }]
license = { file = "LICENSE" }
dependencies = [
    "cutleast-core-lib",
    "plyvel-ci",
    "pyuac",
]

[dependency-groups]
dev = [
    "pyfakefs",
    "pyright",
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pytest-qt",
    "ruff",
]

[tool.uv.sources]
cutleast-core-lib = { git = "https://github.com/Cutleast/cutleast-core-lib" }

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "tests"]
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "[%(asctime)s.%(msecs)03d][%(levelname)s][%(name)s.%(funcName)s]: %(message)s"

[tool.pyright]
include = ["src", "tests"]
typeCheckingMode = "standard"
exclude = ["**/__pycache__"]
stubPath = "./stubs"
extraPaths = ["src"]

# Check here for a full list of options: https://github.com/microsoft/pyright/blob/main/docs/configuration.md#diagnostic-settings-defaults
deprecateTypingAliases = false
reportConstantRedefinition = true
reportDeprecated = "warning"
reportDuplicateImport = true
reportIncompleteStub = "warning"
reportIncompatibleMethodOverride = true
reportInconsistentConstructor = "warning"
reportImplicitOverride = "warning"
reportInvalidStubStatement = "warning"
reportMatchNotExhaustive = false
reportMissingImports = "error"
reportMissingParameterType = "error"
reportMissingTypeArgument = false
reportMissingTypeStubs = false
reportPrivateUsage = "warning"
reportShadowedImports = "warning"
reportTypeCommentUsage = "information"
reportUnknownArgumentType = false
reportUnknownLambdaType = false
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnknownVariableType = false
reportUnnecessaryCast = "information"
reportUnnecessaryComparison = "information"
reportUnnecessaryContains = "information"
reportUnnecessaryIsInstance = "information"
reportUnnecessaryTypeIgnoreComment = "information"
reportUnusedClass = "warning"
reportUnusedImport = "warning"
reportUnusedFunction = "warning"
reportUnusedVariable = "warning"
reportUntypedBaseClass = "error"
reportUntypedClassDecorator = "error"
reportUntypedFunctionDecorator = "error"
reportUntypedNamedTuple = "error"
reportWildcardImportFromLibrary = "warning"
strictDictionaryInference = true
strictListInference = true
strictSetInference = true
